# Anton

./: .gitignore  .gitmodules  .npmrc  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.cargo/: config.toml
apps/agent/: Cargo.toml
apps/agent/src/: main.rs
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/scripts/: tauri-with-workspace-target.mjs
apps/desktop/src/: App.d.ts.map  App.js  App.js.map  App.tsx  main.d.ts.map  main.js  main.js.map  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitkeep
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: a2a.rs  agent.rs  chat.rs  chat_store.rs  commands.rs  lib.rs  main.rs  messaging.rs  onboarding.rs  recv_loop.rs  session.rs  sidecar.rs
apps/desktop/src/lib/: ipc.d.ts  ipc.d.ts.map  ipc.js  ipc.js.map  ipc.ts
apps/desktop/src/pages/: Chat.d.ts  Chat.d.ts.map  Chat.js  Chat.js.map  Chat.tsx  Onboarding.d.ts  Onboarding.d.ts.map  Onboarding.js  Onboarding.js.map  Onboarding.tsx  Settings.d.ts  Settings.d.ts.map  Settings.js  Settings.js.map  Settings.tsx
contracts/: .env.example  README.md  foundry.toml  remappings.txt
contracts/script/: AddRegistrar.s.sol  Deploy.s.sol
contracts/src/: ChatRegistrar.sol
contracts/src/libraries/: Hex.sol
contracts/test/: ChatRegistrar.t.sol
crates/axen-core/: Cargo.toml
crates/axen-core/src/: error.rs  lib.rs  settings.rs  transport.rs
crates/axen-core/src/axl/: config.rs  mod.rs  pem.rs  transport.rs
crates/axen-core/src/crypto/: ed25519.rs  eip712.rs  kdf.rs  mnemonic.rs  mod.rs  vault.rs  wallet.rs
crates/axen-core/src/ens/: bootstrap.rs  mod.rs  resolver.rs
crates/axen-core/src/memory/: mod.rs  zerog.rs
crates/axen-core/src/messaging/: conversations.rs  dispatch.rs  envelope.rs  identity_wire.rs  inbound.rs  mod.rs
scripts/: cargo-clean-workspace-target.mjs
