[package]
name = "anton-agent"
version = "0.0.0"
description = "Headless Anton agent runtime scaffold (A2A + 0G memory hooks land in follow-up PRs)."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "anton-agent"
path = "src/main.rs"

[dependencies]
anton-core = { path = "../../crates/axen-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
