[package]
name = "axen-core"
version = "0.0.0"
description = "Axen shared core: crypto, vault, settings, EIP-712, and (later) AXL/ENS/messaging traits."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# BIP39 / BIP32 / SLIP-0010
bip39 = "2.2"
bip32 = { version = "0.5", default-features = false, features = ["secp256k1", "alloc"] }
hmac = "0.12"
sha2 = "0.10"

# Curves
k256 = { version = "0.13", default-features = false, features = ["std", "ecdsa"] }
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "pkcs8", "pem", "rand_core", "zeroize"] }
pkcs8 = { version = "0.10", default-features = false, features = ["std", "pem", "alloc"] }

# KDF + AEAD
argon2 = { version = "0.5", default-features = false, features = ["std", "alloc"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["std", "alloc", "getrandom"] }

# Ethereum primitives + EIP-712
alloy-primitives = "1"
alloy-sol-types = "1"
tiny-keccak = { version = "2", features = ["keccak"] }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
hex = "0.4"
rand_core = { version = "0.6", features = ["std", "getrandom"] }

[dev-dependencies]
hex-literal = "0.4"
tempfile = "3"
