[package]
name = "anton-desktop"
version = "0.0.0"
description = "Anton desktop app — Tauri 2 shell."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "anton_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

anton-core = { path = "../../../crates/axen-core" }

alloy = { version = "2", default-features = false, features = [
    "contract",
    "provider-http",
    "rpc-types",
    "reqwest-rustls-tls",
    "signers",
    "signer-local",
] }
alloy-primitives = "1"

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
parking_lot = "0.12"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
rusqlite = { version = "0.39.0", features = ["bundled"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
